Distinguish flex only components by adding IFlexSurfaceComponent. Changes related to PrimeFaces work, but also should land to the master to avoid later conflicts (reference prominic/Moonshine-IDE#165)

--- a/src/view/flex/propertyEditors/forms/DataProviderForm.mxml
+++ b/src/view/flex/propertyEditors/forms/DataProviderForm.mxml
@@ -44,8 +44,8 @@
 
 		import view.flex.propertyEditors.forms.DataProviderItemRenderer;
 
-		import view.flex.surfaceComponents.components.IDataProviderComponent;
-		import view.flex.surfaceComponents.components.ISelectableItemsComponent;
+		import view.interfaces.IDataProviderComponent;
+		import view.interfaces.ISelectableItemsComponent;
 
 		private var _label:String = "Items";
 
