Move BasePropertyEditorForm to separate package. Add changes to master to avoid future conflicts (reference prominic/Moonshine-IDE#165)

--- a/src/view/flex/propertyEditors/forms/DateForm.mxml
+++ b/src/view/flex/propertyEditors/forms/DateForm.mxml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<forms:BasePropertyEditorForm
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:forms="view.flex.propertyEditors.forms.*"
-	xmlns:mx="library://ns.adobe.com/flex/mx"
-	xmlns:s="library://ns.adobe.com/flex/spark">
+<suportclasses:BasePropertyEditorForm
+        xmlns:fx="http://ns.adobe.com/mxml/2009"
+        xmlns:mx="library://ns.adobe.com/flex/mx"
+        xmlns:s="library://ns.adobe.com/flex/spark" xmlns:suportclasses="view.suportClasses.*">
 
-	<forms:layout>
-		<s:FormLayout horizontalAlign="contentJustify"/>
-	</forms:layout>
+    <suportclasses:layout>
+        <s:FormLayout horizontalAlign="contentJustify"/>
+    </suportclasses:layout>
 
-	<s:FormItem label="Date">
-		<mx:DateField id="dateField" width="100%"
-			selectedDate="{bindableDate}" change="dateField_changeHandler(event)"/>
-	</s:FormItem>
+    <s:FormItem label="Date">
+        <mx:DateField id="dateField" width="100%"
+                      selectedDate="{bindableDate}" change="dateField_changeHandler(event)"/>
+    </s:FormItem>
 
-	<fx:Script><![CDATA[
+    <fx:Script><![CDATA[
         import mx.binding.utils.BindingUtils;
         import mx.binding.utils.ChangeWatcher;
 
@@ -52,4 +51,4 @@
             this._binding = BindingUtils.bindProperty(this, "bindableDate", this.selectedItem, FIELD_SELECTED_DATE, true);
         }
         ]]></fx:Script>
-</forms:BasePropertyEditorForm>
+</suportclasses:BasePropertyEditorForm>
