--- a/src/view/flex/propertyEditors/forms/BasicsForm.mxml
+++ b/src/view/flex/propertyEditors/forms/BasicsForm.mxml
@@ -1,50 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<forms:BasePropertyEditorForm xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:forms="view.flex.propertyEditors.forms.*"
-	creationComplete="onBasicFormCreationComplete(event)">
+<suportclasses:BasePropertyEditorForm xmlns:fx="http://ns.adobe.com/mxml/2009"
+									  xmlns:s="library://ns.adobe.com/flex/spark"
+									  xmlns:suportclasses="view.suportClasses.*"
+									  creationComplete="onBasicFormCreationComplete(event)">
 
-	<forms:layout>
+	<suportclasses:layout>
 		<s:FormLayout horizontalAlign="contentJustify"/>
-	</forms:layout>
+	</suportclasses:layout>
 
 	<s:FormHeading label="Position"/>
 	<s:FormItem label="X">
 		<s:TextInput id="xInput" width="100%"
-			text="{selectedComponent.x}"
-			keyDown="xInput_keyDownHandler(event)"
-			focusOut="commitX()" enter="commitX()" tabIndex="1" />
+					 text="{selectedComponent.x}"
+					 keyDown="xInput_keyDownHandler(event)"
+					 focusOut="commitX()" enter="commitX()" tabIndex="1"/>
 	</s:FormItem>
 	<s:FormItem label="Y">
 		<s:TextInput id="yInput" width="100%"
-			text="{selectedComponent.y}"
-			keyDown="yInput_keyDownHandler(event)"
-			focusOut="commitY()" enter="commitY()" tabIndex="2"/>
+					 text="{selectedComponent.y}"
+					 keyDown="yInput_keyDownHandler(event)"
+					 focusOut="commitY()" enter="commitY()" tabIndex="2"/>
 	</s:FormItem>
 	<s:FormHeading label="Size"/>
 	<s:FormItem label="Width">
 		<s:TextInput id="widthInput" width="100%"
-			text="{selectedComponentComputedWidth}"
-			keyDown="widthInput_keyDownHandler(event)"
-			focusOut="commitWidth()" enter="commitWidth()" tabIndex="3"/>
+					 text="{selectedComponentComputedWidth}"
+					 keyDown="widthInput_keyDownHandler(event)"
+					 focusOut="commitWidth()" enter="commitWidth()" tabIndex="3"/>
 	</s:FormItem>
 	<s:FormItem label="Height">
 		<s:TextInput id="heightInput" width="100%"
-			text="{selectedComponentComputedHeight}"
-			keyDown="heightInput_keyDownHandler(event)"
-			focusOut="commitHeight()" enter="commitHeight()" tabIndex="4"/>
+					 text="{selectedComponentComputedHeight}"
+					 keyDown="heightInput_keyDownHandler(event)"
+					 focusOut="commitHeight()" enter="commitHeight()" tabIndex="4"/>
 	</s:FormItem>
 	<s:FormHeading label="Layering"/>
 	<s:Group>
 		<s:layout>
 			<s:HorizontalLayout/>
 		</s:layout>
-		<s:Button styleName="bringToFrontButton" toolTip="Bring to Front" click="bringToFrontButton_clickHandler(event)"/>
-		<s:Button styleName="bringForwardButton" toolTip="Bring Forward" click="bringForwardButton_clickHandler(event)"/>
-		<s:Button styleName="sendBackwardButton" toolTip="Send Backward" click="sendBackwardButton_clickHandler(event)"/>
+		<s:Button styleName="bringToFrontButton" toolTip="Bring to Front"
+				  click="bringToFrontButton_clickHandler(event)"/>
+		<s:Button styleName="bringForwardButton" toolTip="Bring Forward"
+				  click="bringForwardButton_clickHandler(event)"/>
+		<s:Button styleName="sendBackwardButton" toolTip="Send Backward"
+				  click="sendBackwardButton_clickHandler(event)"/>
 		<s:Button styleName="sendToBackButton" toolTip="Send to Back" click="sendToBackButton_clickHandler(event)"/>
 	</s:Group>
-	
+
 	<fx:Script><![CDATA[
 		import mx.core.EventPriority;
 		import mx.core.IVisualElement;
@@ -379,4 +382,4 @@
 			}
 		}
 		]]></fx:Script>
-</forms:BasePropertyEditorForm>
+</suportclasses:BasePropertyEditorForm>
