--- a/src/view/flex/propertyEditors/ContainerPropertyEditor.mxml
+++ b/src/view/flex/propertyEditors/ContainerPropertyEditor.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <suportclasses:BasePropertyEditor xmlns:fx="http://ns.adobe.com/mxml/2009"
                                   xmlns:s="library://ns.adobe.com/flex/spark"
-                                  xmlns:forms="view.flex.propertyEditors.forms.*"
+                                  xmlns:forms="view.forms.*"
                                   xmlns:suportclasses="view.suportClasses.*">
 
     <suportclasses:layout>
