--- a/src/view/flex/propertyEditors/InputPropertyEditor.mxml
+++ b/src/view/flex/propertyEditors/InputPropertyEditor.mxml
@@ -2,7 +2,7 @@
 <suportclasses:BasePropertyEditor
         xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        xmlns:forms="view.flex.propertyEditors.forms.*" xmlns:suportclasses="view.suportClasses.*">
+        xmlns:forms="view.forms.*" xmlns:suportclasses="view.suportClasses.*">
 
     <suportclasses:layout>
         <s:VerticalLayout gap="10" padding="10" horizontalAlign="contentJustify"/>
