--- a/src/view/VisualEditor.mxml
+++ b/src/view/VisualEditor.mxml
@@ -13,12 +13,12 @@
 		<s:Button styleName="openButton" toolTip="Open Mockup" click="loadButton_clickHandler(event)"/>
 		<s:Button styleName="saveButton" toolTip="Save Mockup" click="saveButton_clickHandler(event)"/>
 	</s:BorderContainer>
-	<view:ComponentList id="componentList" top="{toolbar.height}" bottom="0" left="0"/>
+	<view:ComponentList id="componentList" top="{toolbar.height}" bottom="0" left="0" visualEditorType="{_visualEditorType}"/>
 
 	<containers:HDividerGroup left="{componentList.width}" right="0" bottom="0" top="{toolbar.height}"
 							  gap="0" minElementWidth="210">
 		<s:Scroller percentWidth="80" percentHeight="100">
-			<view:EditingSurface id="editingSurface"/>
+			<view:EditingSurface id="editingSurface" visualEditorType="{_visualEditorType}"/>
 		</s:Scroller>
 		<view:PropertyEditorContainer id="propertyEditor"
 									  percentHeight="100" percentWidth="20" minWidth="210"
@@ -31,11 +31,19 @@
 
 		private var _file:FileReference;
 
+		[Bindable]
+		private var _visualEditorType:String;
+
+		public function set visualEditorType(value:String):void
+		{
+			_visualEditorType = value;
+		}
+
 		CONFIG::MOONSHINE
 		{
 			private var _fileMoonshine:File;
 			private var _fileStreamMoonshine:FileStream;
-			
+
 			public function saveEditedFile():void
 			{
 				if (!_fileStreamMoonshine) return;
