PrimeFaces: Fix issue where in Flex Visual Editor additional VE files wasn't properly created  (reference prominic/Moonshine-IDE#165)

--- a/src/view/EditingSurface.mxml
+++ b/src/view/EditingSurface.mxml
@@ -102,7 +102,7 @@
 			hasChanged = false;
 			_wasLoaded = this.numElements > 0;
 
-			return EditingSurfaceWriter.toXML(this);
+			return EditingSurfaceWriter.toXML(this, _visualEditorType);
 		}
 
 		CONFIG::MOONSHINE
