PrimeFaces: - Fix issue where generated xhtml was broken due to wrong namespaces - Adjust Button to work with values from property editor (reference prominic/Moonshine-IDE#165)

--- a/src/view/primeFaces/propertyEditors/WindowPropertyEditor.mxml
+++ b/src/view/primeFaces/propertyEditors/WindowPropertyEditor.mxml
@@ -13,6 +13,6 @@
 
     <s:FormHeading label="Data"/>
 
-    <forms:TextForm textProperty="title"/>
+    <forms:TextForm label="Title" textProperty="title"/>
 
 </suportclasses:BasePropertyEditor>
