--- a/src/view/flex/propertyEditors/CheckBoxPropertyEditor.mxml
+++ b/src/view/flex/propertyEditors/CheckBoxPropertyEditor.mxml
@@ -12,7 +12,7 @@
 
     <forms:TextForm textProperty="label"/>
 
-    <s:FormHeading label="Data"/>
+    <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin"/>
 
     <forms:ToggleButtonSelectedForm/>
 
