--- a/src/view/flex/propertyEditors/TabsPropertyEditor.mxml
+++ b/src/view/flex/propertyEditors/TabsPropertyEditor.mxml
@@ -10,7 +10,7 @@
 
     <forms:BasicsForm/>
 
-    <s:FormHeading label="Data"/>
+    <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin"/>
 
     <forms:DataProviderForm label="Tabs"/>
 
