--- a/src/view/ComponentList.mxml
+++ b/src/view/ComponentList.mxml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <s:List xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
-	itemRenderer="view.ComponentListItemRenderer">
+	itemRenderer="view.ComponentListItemRenderer"
+    skinClass="skins.ComponentListSkin" contentBackgroundColor="#FCFCFC">
 	<fx:Script>
 	<![CDATA[
         import utils.VisualEditorType;
