--- a/src/view/ComponentListItemRenderer.mxml
+++ b/src/view/ComponentListItemRenderer.mxml
@@ -2,7 +2,7 @@
 <s:ItemRenderer
 	xmlns:fx="http://ns.adobe.com/mxml/2009"
 	xmlns:s="library://ns.adobe.com/flex/spark"
-	minHeight="120"
+	minHeight="120" rollOverColor="#ffffff"
 	mouseDown="mouseDownHandler(event)">
 	
 	<fx:Metadata>
