--- a/src/view/forms/DateForm.mxml
+++ b/src/view/forms/DateForm.mxml
@@ -2,17 +2,18 @@
 <suportclasses:BasePropertyEditorForm
         xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:mx="library://ns.adobe.com/flex/mx"
-        xmlns:s="library://ns.adobe.com/flex/spark" xmlns:suportclasses="view.suportClasses.*">
+        xmlns:s="library://ns.adobe.com/flex/spark"
+        xmlns:suportclasses="view.suportClasses.*" skinClass="skins.FormSkin">
 
     <suportclasses:layout>
-        <s:FormLayout horizontalAlign="contentJustify"/>
+        <s:FormLayout />
     </suportclasses:layout>
 
-    <s:FormItem label="Date">
+    <s:FormHeading skinClass="skins.FormHeadingSkin" height="0"/>
+    <s:FormItem label="Date" skinClass="skins.StackedFormItemSkin">
         <mx:DateField id="dateField" width="100%"
                       selectedDate="{bindableDate}" change="dateField_changeHandler(event)"/>
     </s:FormItem>
-
     <fx:Script><![CDATA[
         import mx.binding.utils.BindingUtils;
         import mx.binding.utils.ChangeWatcher;
