--- a/src/view/forms/SelectedTabForm.mxml
+++ b/src/view/forms/SelectedTabForm.mxml
@@ -2,13 +2,13 @@
 <suportclasses:BasePropertyEditorForm
         xmlns:fx="http://ns.adobe.com/mxml/2009"
         xmlns:s="library://ns.adobe.com/flex/spark"
-        xmlns:suportclasses="view.suportClasses.*">
+        xmlns:suportclasses="view.suportClasses.*" skinClass="skins.FormItemSkin">
 
     <suportclasses:layout>
-        <s:FormLayout horizontalAlign="contentJustify"/>
+        <s:FormLayout />
     </suportclasses:layout>
 
-    <s:FormItem label="Selected Tab">
+    <s:FormItem label="Selected Tab" skinClass="skins.StackedFormItemSkin">
         <s:NumericStepper id="stepper"
                           minimum="1"
                           maximum="{IMultiViewContainer(selectedItem).numViews}"
@@ -18,7 +18,6 @@
     </s:FormItem>
 
     <fx:Script><![CDATA[
-        import view.interfaces.IMultiViewContainer;
         import view.interfaces.IMultiViewContainer;
 
         private function stepper_changeHandler(event:Event):void
