--- a/src/view/forms/TextForm.mxml
+++ b/src/view/forms/TextForm.mxml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <suportclasses:BasePropertyEditorForm xmlns:fx="http://ns.adobe.com/mxml/2009"
                                       xmlns:s="library://ns.adobe.com/flex/spark"
-                                      xmlns:suportclasses="view.suportClasses.*">
+                                      xmlns:suportclasses="view.suportClasses.*"
+                                      skinClass="skins.FormSkin">
 
     <suportclasses:layout>
-        <s:FormLayout horizontalAlign="contentJustify"/>
+        <s:FormLayout />
     </suportclasses:layout>
 
-    <s:FormItem label="{label}">
-        <s:TextInput id="textInput" width="100%"
-                     text="{bindableText}"
+    <s:FormHeading skinClass="skins.FormHeadingSkin" height="0"/>
+    <s:FormItem label="{label}" skinClass="skins.StackedFormItemSkin">
+        <s:TextInput id="textInput"
+                     text="{bindableText}" width="100%" minWidth="156"
                      change="textInput_changeHandler(event)"/>
     </s:FormItem>
 
