PrimeFaces: - Handle attribute "disabled" for Button - Need to add skin which emulates disabling of Button, but allow clicking on it. - Move common operations on size to the XMLCodeUtils (reference prominic/Moonshine-IDE#199)

--- a/src/view/flex/propertyEditors/RadioButtonPropertyEditor.mxml
+++ b/src/view/flex/propertyEditors/RadioButtonPropertyEditor.mxml
@@ -16,6 +16,6 @@
 
     <forms:TextForm label="Group Name" textProperty="groupName"/>
 
-    <forms:ToggleButtonSelectedForm/>
+    <forms:ToggleButtonSelectedForm label="Selected" textProperty="selected"/>
 
 </suportclasses:BasePropertyEditor>
