--- a/src/view/flex/propertyEditors/CheckBoxPropertyEditor.mxml
+++ b/src/view/flex/propertyEditors/CheckBoxPropertyEditor.mxml
@@ -14,6 +14,6 @@
 
     <s:FormHeading label="Data" skinClass="skins.FormHeadingSkin"/>
 
-    <forms:ToggleButtonSelectedForm/>
+    <forms:ToggleButtonSelectedForm label="Selected" textProperty="selected"/>
 
 </suportclasses:BasePropertyEditor>
