--- a/src/view/forms/ToggleButtonSelectedForm.mxml
+++ b/src/view/forms/ToggleButtonSelectedForm.mxml
@@ -8,18 +8,87 @@
         <s:FormLayout />
     </suportclasses:layout>
 
-    <s:FormItem label="Selected" skinClass="skins.FormItemSkin">
+    <s:FormItem label="{label}" skinClass="skins.FormItemSkin">
         <s:CheckBox id="check"
-                    selected="{ToggleButtonBase(selectedItem).selected}"
+                    selected="{bindableText}"
                     change="check_changeHandler(event)"/>
     </s:FormItem>
 
     <fx:Script><![CDATA[
-        import spark.components.supportClasses.ToggleButtonBase;
+        import mx.binding.utils.BindingUtils;
+        import mx.binding.utils.ChangeWatcher;
+
+        private var _binding:ChangeWatcher;
+
+        [Bindable]
+        public var bindableText:Boolean;
+        private var _label:String = "Text";
+
+        [Bindable("labelChange")]
+        public function get label():String
+        {
+            return this._label;
+        }
+
+        public function set label(value:String):void
+        {
+            if (this._label === value)
+            {
+                return;
+            }
+            this._label = value;
+            this.dispatchEvent(new Event("labelChange"));
+        }
+
+        private var _textProperty:String = "text";
+
+        [Bindable("change")]
+        public function get textProperty():String
+        {
+            return this._textProperty;
+        }
+
+        public function set textProperty(value:String):void
+        {
+            if (this._textProperty === value)
+            {
+                return;
+            }
+            this._textProperty = value;
+            this.updateBinding();
+            this.dispatchEvent(new Event(Event.CHANGE));
+        }
 
         private function check_changeHandler(event:Event):void
         {
-            ToggleButtonBase(this.selectedItem).selected = this.check.selected;
+            if (!(this.textProperty in this.selectedItem))
+            {
+                this.check.errorString = "Field " + this._textProperty + " does not exist";
+                return;
+            }
+            this.check.errorString = "";
+
+            var selected:Boolean = this.check.selected;
+            if (this.textProperty == "enabled")
+            {
+                selected = !selected;
+            }
+
+            this.selectedItem[this._textProperty] = selected;
+        }
+
+        private function updateBinding():void
+        {
+            if (this._binding)
+            {
+                this._binding.unwatch();
+                this._binding = null;
+            }
+            if (this.selectedItem === null)
+            {
+                return;
+            }
+            this._binding = BindingUtils.bindProperty(this, "bindableText", this.selectedItem, this._textProperty, true);
         }
         ]]></fx:Script>
 </suportclasses:BasePropertyEditorForm>
