--- a/src/view/primeFaces/surfaceComponents/skins/ButtonSkin.mxml
+++ b/src/view/primeFaces/surfaceComponents/skins/ButtonSkin.mxml
@@ -13,16 +13,36 @@
 		<s:State name="disabled" />
 	</s:states>
 
-	<!-- background -->
-	<s:Rect left="0" right="0" top="0" bottom="0"
-		width="69" height="20"
-		radiusX="2" radiusY="2">
-		<s:stroke>
-			<s:SolidColorStroke color="#A9A9A9" weight="2" />
-		</s:stroke>
+	<!-- layer 2: fill -->
+	<!--- @private -->
+	<s:Rect id="fill" left="1" right="1" top="1" bottom="1" radiusX="2">
 		<s:fill>
-			<s:SolidColor color="#EEEEEE" />
+			<s:LinearGradient rotation="90" spreadMethod="repeat">
+				<s:GradientEntry color="#c4c4c4"
+								 color.over="#85b2cb"
+								 color.down="#85b2cb"
+								 alpha.over="0.4"
+								 alpha="0.4" />
+				<s:GradientEntry color="#c4c4c4"
+								 color.over="#85b2cb"
+								 color.down="#85b2cb"
+								 alpha.over="0.6"
+								 alpha="0.8" />
+				<s:GradientEntry color="#c4c4c4"
+								 color.over="#85b2cb"
+								 color.down="#85b2cb"
+								 alpha.over="0.6"
+								 alpha="0.8" />
+			</s:LinearGradient>
 		</s:fill>
+	</s:Rect>
+
+	<!-- layer 7: border - put on top of the fill so it doesn't disappear when scale is less than 1 -->
+	<!--- @private -->
+	<s:Rect id="border" left="0" right="0" top="0" bottom="0" width="69" height="20" radiusX="2">
+		<s:stroke>
+			<s:SolidColorStroke weight="1" color="#a8a8a8" color.over="#7096ab"/>
+		</s:stroke>
 	</s:Rect>
 
 	<!-- label -->
@@ -31,7 +51,9 @@
 		left="10" right="10" top="2" bottom="2"
 		textAlign="center"
 		verticalAlign="middle"
-		maxDisplayedLines="1">
+		maxDisplayedLines="1"
+		color="#4f4f4f" fontWeight="bold" fontSize="12"
+	    color.down="#1c4257">
 	</s:Label>
 
 </s:SparkButtonSkin>
